--- a/index.html
+++ b/index.html
@@ -225,24 +225,21 @@
             <!-- Project 1 -->
             <div class="project-card">
                 <div class="project-image">
-                <img src="https://via.placeholder.com/350x200" alt="Project 1" />
+                <img src="Media/Project_1_SS.png" alt="Project 1" />
                 </div>
                 <div class="project-info">
-                <h3>Project Name 1</h3>
+                <h3>Hair_Day_HomePage</h3>
                 <p>
-                    A brief description of the project, what technologies were used,
-                    and what problems it solves.
+                    Hair Day is a modern, responsive homepage design for a fictional beauty salon. The goal of this project was to showcase strong front-end development skills by creating a clean, user-friendly landing page that highlights the brand’s services, mission, and visual identity.
                 </p>
                 <div class="project-tags">
-                    <span>React</span>
-                    <span>JavaScript</span>
                     <span>HTML/CSS</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" target="_blank"
+                    <a href="https://github.com/4-Endless-coder/My-Projects/tree/main/Hair_Day_HomePage" target="_blank"
                     ><i class="fab fa-github"></i> Code</a
                     >
-                    <a href="#" target="_blank"
+                    <a href="https://my-projects-hday.vercel.app/" target="_blank"
                     ><i class="fas fa-external-link-alt"></i> Live</a
                     >
                 </div>
@@ -256,7 +253,7 @@
                 </div>
                 <div class="project-info">
                 <h3>Password Strength Checker</h3>
-                <p>Test..Paragraphs..</p>
+                <p>The Password Strength Checker is a responsive web application designed to help users evaluate the strength of their passwords in real-time. It visually guides users toward creating secure and strong passwords by analyzing key criteria such as length, use of uppercase/lowercase letters, numbers, and special characters.</p>
                 <div class="project-tags">
                     <span>HTML/CSS</span>
                     <span>JavaScript</span>
@@ -275,20 +272,20 @@
             <!-- Project 3 -->
             <div class="project-card">
                 <div class="project-image">
-                <img src="https://via.placeholder.com/350x200" alt="Project 3" />
+                <img src="Media/Project_3_SS.png" alt="Project 3" />
                 </div>
                 <div class="project-info">
-                <h3>Project Name 3</h3>
-                <p>Test..paragrapghs.</p>
+                <h3>Stone_Peper_Scissor</h3>
+                <p>This is a fun and interactive Stone Paper Scissor game where users can play against the computer. The computer randomly chooses between stone, paper, or scissors, and the app instantly determines the winner. It's a great example of user interaction, conditional logic, and dynamic UI updates in a simple game format.</p>
                 <div class="project-tags">
-                    <span>React</span>
-                    <span>Firebase</span>
+                    <span>HTML/CSS</span>
+                    <span>JavaScript</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" target="_blank"
+                    <a href="https://github.com/4-Endless-coder/My-Projects/tree/main/Stone_Peper_Scissor" target="_blank"
                     ><i class="fab fa-github"></i> Code</a
                     >
-                    <a href="#" target="_blank"
+                    <a href="https://my-projects-53mw.vercel.app/" target="_blank"
                     ><i class="fas fa-external-link-alt"></i> Live</a
                     >
                 </div>
