--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="Media/favicon/favicon-96x96.png" type="image/png" />
   </head>
     <body>
         <!-- Header Section -->
