Update project tags and links for improved accuracy and clarity

--- a/index.html
+++ b/index.html
@@ -243,11 +243,13 @@
                 validation and manages available booking times dynamically.
               </p>
               <div class="project-tags">
-                <span>HTML/CSS</span>
+                <span>React (v19)/Vite</span>
+                <span>HTML, CSS, JavaScript (ES6+)</span>
+                <span>Jest & React Testing Library, ESLint</span>
               </div>
               <div class="project-links">
                 <a
-                  href="https://github.com/4-Endless-coder/My-Projects/tree/main/Hair_Day_HomePage"
+                  href="https://github.com/4-Endless-coder/codex-react.git"
                   target="_blank"
                   ><i class="fab fa-github"></i> Code</a
                 >
@@ -274,7 +276,7 @@
                 characters.
               </p>
               <div class="project-tags">
-                <span>HTML/CSS</span>
+                <span>HTML/CSS/</span>
                 <span>JavaScript</span>
               </div>
               <div class="project-links">
